Add Security Bearer for Swagger
